--- a/table.html
+++ b/table.html
@@ -45,7 +45,7 @@ table{
     </tr>
     <tr>
         <td>Sankuri</td>
-        <td>sankuri@gmail.com</td>
+      g  <td>sankuri@gmail.com</td>
         <td>Manager</td>
         <td>30</td>
         <td>140000</td>
